--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"prettier": "^2.8.2",
 		"prettier-plugin-svelte": "^2.8.1",
 		"prettier-plugin-tailwindcss": "^0.2.1",
+		"prisma": "^4.8.1",
 		"svelte": "^3.54.0",
 		"svelte-check": "^2.9.2",
 		"svelte-preprocess": "^5.0.0",
@@ -39,8 +40,11 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@auth/core": "^0.2.5",
+		"@auth/sveltekit": "^0.1.12",
+		"@next-auth/prisma-adapter": "^1.0.5",
 		"@prisma/client": "^4.8.1",
-		"prisma": "^4.8.1",
+		"next-auth": "^4.18.8",
 		"rehype-autolink-headings": "^6.1.1",
 		"rehype-slug": "^5.1.0"
 	}
