--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"@auth/sveltekit": "^0.1.12",
 		"@next-auth/prisma-adapter": "^1.0.5",
 		"@prisma/client": "^4.8.1",
+		"date-fns": "^2.29.3",
 		"next-auth": "^4.18.8",
 		"rehype-autolink-headings": "^6.1.1",
 		"rehype-slug": "^5.1.0"
