--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^1.0.0",
-		"@sveltejs/kit": "^1.0.0",
+		"@sveltejs/kit": "^1.5.2",
 		"@tailwindcss/forms": "^0.5.3",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
@@ -45,9 +45,11 @@
 		"@auth/sveltekit": "^0.1.12",
 		"@next-auth/prisma-adapter": "^1.0.5",
 		"@prisma/client": "^4.8.1",
+		"class-variance-authority": "^0.4.0",
 		"date-fns": "^2.29.3",
 		"next-auth": "^4.18.8",
 		"rehype-autolink-headings": "^6.1.1",
-		"rehype-slug": "^5.1.0"
+		"rehype-slug": "^5.1.0",
+		"svelte-command-palette": "^1.2.1"
 	}
 }
