--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
+		"@resvg/resvg-js": "^2.4.1",
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/kit": "^1.5.2",
 		"@tailwindcss/forms": "^0.5.3",
@@ -30,6 +31,8 @@
 		"prettier-plugin-svelte": "^2.8.1",
 		"prettier-plugin-tailwindcss": "^0.2.1",
 		"prisma": "^4.8.1",
+		"satori": "^0.3.1",
+		"satori-html": "^0.3.2",
 		"svelte": "^3.54.0",
 		"svelte-check": "^2.9.2",
 		"svelte-preprocess": "^5.0.0",
