--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"test:unit": "vitest",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write .",
-		"vercel-build": "prisma generate && prisma migrate deploy && vite build"
-	},
+		"format": "prettier --plugin-search-dir . --write ."
+		},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
 		"@resvg/resvg-js": "^2.4.1",
