--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"test:unit": "vitest",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write ."
-		},
+	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
 		"@resvg/resvg-js": "^2.4.1",
@@ -48,6 +48,7 @@
 		"@auth/sveltekit": "^0.1.12",
 		"@next-auth/prisma-adapter": "^1.0.5",
 		"@prisma/client": "^4.8.1",
+		"@sveltejs/adapter-vercel": "^2.0.2",
 		"class-variance-authority": "^0.4.0",
 		"date-fns": "^2.29.3",
 		"next-auth": "^4.18.8",
