--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"@auth/sveltekit": "^0.2.2",
 		"@next-auth/prisma-adapter": "^1.0.5",
 		"@prisma/client": "^4.8.1",
+		"@vercel/analytics": "^0.1.10",
 		"date-fns": "^2.29.3",
 		"next-auth": "^4.18.8",
 		"rehype-autolink-headings": "^6.1.1",
