--- a/package.json
+++ b/package.json
@@ -14,23 +14,22 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.28.1",
+		"@playwright/test": "^1.31.1",
 		"@resvg/resvg-js": "^2.4.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.8.5",
 		"@tailwindcss/forms": "^0.5.3",
-		"@typescript-eslint/eslint-plugin": "^5.45.0",
-		"@typescript-eslint/parser": "^5.45.0",
+		"@typescript-eslint/eslint-plugin": "^5.53.0",
+		"@typescript-eslint/parser": "^5.53.0",
 		"autoprefixer": "^10.4.13",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.5.0",
+		"eslint": "^8.35.0",
+		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"mdsvex": "^0.10.6",
 		"postcss": "^8.4.21",
 		"prettier": "^2.8.4",
 		"prettier-plugin-svelte": "^2.9.0",
 		"prettier-plugin-tailwindcss": "^0.2.1",
-		"prisma": "^4.8.1",
 		"satori": "^0.3.1",
 		"satori-html": "^0.3.2",
 		"svelte": "^3.55.1",
@@ -54,7 +53,7 @@
 		"rehype-autolink-headings": "^6.1.1",
 		"rehype-slug": "^5.1.0",
 		"svelte-command-palette": "^1.2.1",
-		"@sveltejs/adapter-vercel": "^1.0.0"
-
+		"@sveltejs/adapter-vercel": "^1.0.0",
+		"prisma": "^4.10.1"
 	}
 }
