--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
 		"next-auth": "^4.18.8",
 		"prisma": "^4.10.1",
 		"rehype-autolink-headings": "^6.1.1",
-		"rehype-slug": "^5.1.0"
+		"rehype-slug": "^5.1.0",
+		"gpt3-tokenizer": "^1.1.5",
+		"openai": "^3.2.1",
+		"sse.js": "^0.6.1"
 	}
 }
