--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"prisma": "^4.10.1",
 		"rehype-autolink-headings": "^6.1.1",
 		"rehype-slug": "^5.1.0",
-		"sse.js": "^0.6.1"
+		"sse.js": "^0.6.1",
+		"svelte-markdown": "^0.2.3"
 	}
 }
