--- a/package.json
+++ b/package.json
@@ -49,13 +49,11 @@
 		"@next-auth/prisma-adapter": "^1.0.5",
 		"@prisma/client": "^4.10.1",
 		"date-fns": "^2.29.3",
-		"gpt3-tokenizer": "^1.1.5",
 		"next-auth": "^4.18.8",
-		"openai": "^3.2.1",
 		"prisma": "^4.10.1",
 		"rehype-autolink-headings": "^6.1.1",
 		"rehype-slug": "^5.1.0",
-		"sse.js": "^0.6.1",
-		"svelte-markdown": "^0.2.3"
+		"svelte-markdown": "^0.2.3",
+		"web-vitals": "^2.1.4"
 	}
 }
