--- a/package.json
+++ b/package.json
@@ -47,14 +47,13 @@
 	"dependencies": {
 		"@auth/core": "0.5.0",
 		"@auth/sveltekit": "0.2.2",
-		"@next-auth/prisma-adapter": "^1.0.5",
+		"@auth/prisma-adapter": "^1.0.1",
 		"@prisma/client": "^4.10.1",
 		"date-fns": "^2.29.3",
 		"next-auth": "^4.18.8",
 		"prisma": "^4.10.1",
 		"rehype-autolink-headings": "^6.1.1",
 		"rehype-slug": "^5.1.0",
-		"svelte-markdown": "^0.2.3",
-		"web-vitals": "^2.1.4"
+		"svelte-markdown": "^0.2.3"
 	}
 }
